fix: bg color set white in dark mode by design

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,7 +29,7 @@ a {
     }
     body {
         color: white;
-        background: black;
+        background: white;
     }
 }
 
